@@ -349,7 +349,9 @@ module ActiveMerchant #:nodoc:
       end
 
       def unescape_xml(escaped_xml)
-        escaped_xml.gsub(/\&gt;/, '>').gsub(/\&lt;/, '<')
+        xml = escaped_xml.gsub(/\&gt;/, '>')
+        xml.slice! "<?xml version=\"1.0\"?>" # rubocop:disable Style/StringLiterals
+        xml
       end
     end
   end
